--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -38,11 +38,11 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
       
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v4
+    - name: Upload JAR file
+      uses: actions/upload-artifact@v2
       with:
-        name: Package
-        path: build/libs
+        name: Meteor1.20.4
+        path: target/*.jar
 
     # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
     # the publishing section of your build.gradle
